--- a/app/views/password_resets/create.html.erb
+++ b/app/views/password_resets/create.html.erb
@@ -1,4 +1,28 @@
 <h1>PasswordResets#create</h1>
 <p>Find me in app/views/password_resets/create.html.erb</p>
 <h1>Reset Password</h1>
+<% provide(:title, "Reset Password") %>
+
+<h1>Enter Your User Information </h1>
+<%= form_tag edit_password_reset_path do %>
+
+    <fieldset>
+      <div>
+        <%= label_tag :password %>
+        <%= text_field_tag :password, params[:password], :placeholder => "Password" %>
+      </div>
+      <div>
+        <%= label_tag :password_confirmation %>
+        <%= text_field_tag :password_confirmation, params[:password_confirmation], :placeholder => "Enter same password again" %>
+      </div>
+
+      <div class="actions">
+        <%= submit_tag :submit, class: "btn btn-primary" %>
+      </div>
+    </fieldset>
+
+<% end %>
+
+
+
 
