--- a/app/views/password_resets/edit.html.erb
+++ b/app/views/password_resets/edit.html.erb
@@ -1,7 +1,7 @@
 <% provide(:title, "Reset Password") %>
 
-<h1>Enter Your User Information </h1>
-<%= form_tag send_password_reset_path do %>
+<h1>Enter Your Password Information </h1>
+<%= form_tag(password_reset_path, method:"put") do %>
 
     <fieldset>
       <div>
