--- a/app/views/password_resets/new.html.erb
+++ b/app/views/password_resets/new.html.erb
@@ -4,7 +4,7 @@
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
 
-    <%= form_tag password_resets_path do %>
+    <%= form_tag password_resets_path, method: "post" do %>
         <fieldset>
 
           <%= label_tag :Email %>
