--- a/app/views/role/super_admin_dashboards/new.html.erb
+++ b/app/views/role/super_admin_dashboards/new.html.erb
@@ -2,7 +2,7 @@
 <% provide(:title, ' Sign up Form') %>
 <h1>User Registration Form</h1>
 
-<%= form_tag role_super_admin_dashboards_path do |f|%>
+<%= form_tag role_super_admin_dashboards_path, method: "get" do |f|%>
 
     <fieldset>
       <div>
