--- a/app/views/time_window_managements/index.html.erb
+++ b/app/views/time_window_managements/index.html.erb
@@ -1,2 +1,7 @@
-<h1>TimeWindowManagements#index</h1>
-<p>Find me in app/views/time_window_managements/index.html.erb</p>
+<!--<div class="clearfix hidden-lg hidden-md "></div>-->
+<a class="sidenav-toggle-btn">
+  <span  style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
+</a>
+
+<%= render 'time_windows_side_nav' %>
+<%= render 'time_window_info_table' %>
